# TestMagick

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  run
.github/workflows/: ci.yml
data/: sample_problems.yaml  sample_rich_problems.yaml
docs/sample-output/: README.md  answer.typ  exam.typ
src/testmagick/: __init__.py  __main__.py  builder.py  cli.py  io.py  renderer.py  schema.py
src/testmagick/templates/: answer.typ.j2  exam.typ.j2
tests/: test_renderer.py  test_schema.py
